@@ -1,1 +1,0 @@
-npm config set python c:\python27\python.exe
