@@ -9,3 +9,13 @@ Documentation is not available yet.  Sorry.
 
 To become a contributor to this project please look at the document called
 "Contribution Agreement.pdf".
+
+
+*** Windows Build ***
+
+On windows we have developed OpenVEILNodeJs using Visual Studio 2015.  Open a Node.js command prompt and issue the following commands to configure the build environment.
+
+   configure.cmd
+   
+This file will download NAN and cmake-js and then create the Visual Studio project files in the build folder.
+
