@@ -5,5 +5,5 @@ var obj = new addon.KeyVEILConnector();
 
 console.log(obj);
 
-console.log( obj.isConnected() );
+console.log( obj.isConnected );
 obj.disconnect();
