@@ -1,3 +1,10 @@
 call npm install nan --save
-call npm install cmake-js --save
-cmake-js configure -D
+
+rem local copies
+rem call npm install cmake-js --save
+call npm install -g cmake-js
+
+
+REM Uncomment the next line for debug (instead of the following line)
+REM cmake-js configure -D
+cmake-js configure
