@@ -1,1 +1,0 @@
-set PYTHON=c:\python27
