@@ -7,8 +7,8 @@
   "gypfile": true,
   "dependencies": {
     "bindings": "~1.2.1",
-    "cmake-js": "^3.0.0",
-    "nan": "^2.1.0"
+    "cmake-js": "^3.1.2",
+    "nan": "^2.2.0"
   },
   "scripts": {
     "install": "cmake-js compile"
